# hackathon-pipeline-guard

./: .dockerignore  .env.example  .gitignore  DEVPOST.md  Dockerfile  README.md  SPLUNK.md  SPLUNK_DEVPOST.md  architecture_diagram.md  deploy_cloudrun.sh  make_demo_video.py  make_splunk_video.py  pyproject.toml
.github/workflows/: ci.yml
demo/: sample_output.txt  webhook_payload_example.json
docs/: index.html
pipelineguard/: __init__.py  agent.py  cli.py  mcp_server.py  models.py  prompts.py  splunk_agent.py  splunk_prompts.py  vertex_agent.py  webhook.py
pipelineguard/backends/: __init__.py  direct.py  gitlab_mcp.py  mcp.py  splunk_direct.py  splunk_mcp.py
pipelineguard/ingesters/: __init__.py  gitlab_to_splunk.py
tests/: test_ingester.py
