[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipelineguard"
version = "0.1.0"
description = "AI-powered GitLab CI pipeline monitoring and auto-fix agent using Gemini"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "google-genai>=0.8.0",
    "mcp>=1.0.0",
    "python-gitlab>=4.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
web = ["gradio>=4.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]

[project.scripts]
pipelineguard = "pipelineguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pipelineguard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
